<resources>
    <string name="app_name">Short Film</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="movie_icon">Movie Icon</string>
    <string name="user_name">USER NAME</string>
    <string name="password">PASSWORD</string>
    <string name="login">LOGIN</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="title_activity_navigation">Short Film App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="name">Name</string>
    <string name="mobile">Mobile</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="email_id">Email ID</string>
    <string name="profile_password">Password</string>
    <string name="ticket_booked">Ticket Booked</string>


    <!--Dummy Text-->
    <string name="movie_title">MAD MAX FURY ROAD</string>
    <string name="movie_genre">Action, Adventure, Sci-Fi</string>
    <string name="movie_release">2h  -  14 May 2015</string>
    <string name="notification">Notification</string>
    <string name="have_an_account">HAVE AN ACCOUNT</string>
    <string name="full_name">FULL NAME</string>
    <string name="email">EMAIL</string>
    <string name="payment_partne">Payment Gateway</string>
    <string name="book_watch">Book &amp; Watch</string>
    <string name="total_tickets_booked">Total Tickets Booked : </string>
    <string name="amount">1,150</string>
    <string name="copy_copy_protected_content">\u00A9 Copy Protected Content</string>
    <string name="dummy_lorem_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the for is industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.  dummy text ever since the</string>

    <string name="update">UPDATE</string>
    <string name="my_profile">MY PROFILE</string>
    <string name="watch_list">WATCH LIST</string>
    <string name="rating">RATING</string>
    <string name="contact_us">CONTACT US</string>
    <string name="logout">LOGOUT</string>
    <string name="watch_free">WATCH FREE !</string>


    <string name="credit_card">CREDIT CARD ➝</string>
    <string name="debit_card">DEBIT CARD ➝</string>
    <string name="net_banking">NETBANKING ➝</string>
    <string name="paytm_wallet">PAYTM WALLET ➝</string>
    <string name="ticket_booking">TICKET BOOKING</string>
    <string name="how_would_you_like_to_pay">How Would You Like To Pay ?</string>
    <string name="now_playing">NOW PLAYING</string>
    <string name="details">DETAILS</string>
    <string name="my_booking">MY BOOKING</string>
    <string name="no_movie_playback">No movie playback validity after playing a movie</string>
    <string name="no_booking">Hello ! No Movie Tickets Booking Yet .</string>
    <string name="expired">EXPIRED</string>
    <string name="synopsis">Synopsis</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="interested_to_watch">Interested to Watch ?</string>
    <string name="four_dots">....</string>
    <string name="people_are_interested_to_watch">People are Interested To Watch</string>
    <string name="releasing_on">Releasing On :</string>
    <string name="_100">100/-</string>
    <string name="trouble_logging_in">Trouble Logging in</string>
    <string name="trouble_signing_up">Trouble Signing up</string>
    <string name="error_fetching_data">Error fetching data</string>
</resources>
