<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_profile"
            android:icon="@drawable/nav_profile"
            android:title="@string/my_profile" />
        <item
            android:id="@+id/nav_watch_list"
            android:icon="@drawable/nav_watchlist"
            android:title="@string/watch_list" />
        <item
            android:id="@+id/nav_rating"
            android:icon="@drawable/nav_rating"
            android:title="@string/rating" />
        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/nav_contact_us"
            android:title="@string/contact_us" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/nav_logout"
            android:title="@string/logout" />
    </group>
</menu>
