<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="32dp">

        <include layout="@layout/movie_box_include" />

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="25dp"
            android:contentDescription="@string/movie_icon"
            android:src="@drawable/movie_icon" />

        <EditText
            android:id="@+id/edtFullName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/form_view_height"
            android:layout_marginTop="@dimen/form_view_margin"
            android:layout_marginBottom="@dimen/form_view_margin"
            android:background="@drawable/edit_text_style"
            android:fontFamily="@font/lato_bold"
            android:hint="@string/full_name"
            android:paddingLeft="@dimen/edit_text_indentation"
            android:paddingRight="@dimen/edit_text_indentation"
            android:textColor="@android:color/white"
            android:textFontWeight="100"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/form_view_height"
            android:layout_marginTop="@dimen/form_view_margin"
            android:layout_marginBottom="@dimen/form_view_margin"
            android:background="@drawable/edit_text_style"
            android:fontFamily="@font/lato_bold"
            android:hint="@string/email"
            android:paddingLeft="@dimen/edit_text_indentation"
            android:paddingRight="@dimen/edit_text_indentation"
            android:textColor="@android:color/white"
            android:textFontWeight="100"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="@dimen/form_view_margin"
            android:layout_marginBottom="@dimen/form_view_margin"
            android:background="@drawable/edit_text_style_2"
            android:fontFamily="@font/lato_bold"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/edit_text_indentation"
            android:paddingRight="@dimen/edit_text_indentation"
            android:textColor="@android:color/white"
            android:textFontWeight="100"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btnSignUp"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/form_view_height"
            android:layout_marginTop="@dimen/form_view_margin"
            android:layout_marginBottom="@dimen/form_view_margin"
            android:background="@drawable/edit_text_style_3"
            android:fontFamily="@font/lato_bold"
            android:text="@string/create_account"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/lato_regular"
            android:text="@string/have_an_account"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="14sp" />
    </LinearLayout>


</ScrollView>