<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/imgMoviePoster"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:scaleType="centerCrop" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_bold"
                    android:paddingTop="20dp"
                    android:paddingBottom="4dp"
                    android:text="@string/interested_to_watch"
                    android:textAlignment="center" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp">

                    <Button
                        android:layout_width="100dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="6dp"
                        android:layout_marginEnd="6dp"
                        android:background="@drawable/button_style_5"
                        android:fontFamily="@font/lato_thin"
                        android:text="@string/yes" />

                    <Button
                        android:layout_width="100dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="6dp"
                        android:layout_marginEnd="6dp"
                        android:background="@drawable/button_style_6"
                        android:fontFamily="@font/lato_thin"
                        android:text="@string/no" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="60dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lato_bold"
                        android:paddingEnd="5dp"
                        android:text="1,150"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                        android:textColor="@color/colorAccent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lato_medium"
                        android:text="@string/people_are_interested_to_watch"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/colorBackground"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="11dp"
                android:text="COMING SOON"
                android:textAlignment="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorBackground"
                android:fontFamily="@font/lato_bold"
                android:text="@string/four_dots"
                android:textColor="@color/colorAccent"
                android:textSize="30sp" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>