<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/booking_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#0b0b0d"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:weightSum="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_light"
                android:paddingLeft="38dp"
                android:paddingRight="16dp"
                android:text="@string/my_booking"
                android:textSize="16sp" />

            <Switch
                android:id="@+id/toggleBtn"
                android:layout_width="100dp"
                android:layout_height="20dp"
                android:layout_weight="1" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/empty_booking_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/booking_title"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/movie_icon" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_bold"
                    android:padding="8dp"
                    android:text="@string/no_booking"
                    android:textAlignment="center" />

                <Button
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/book_btn_style"
                    android:foreground="?attr/selectableItemBackground"
                    android:padding="14dp"
                    android:text="@string/book_watch" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/booking_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/booking_title"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/bottom_bannar"
                android:orientation="vertical">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/booking_recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:scrollbars="vertical" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/bottom_bannar"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_alignParentBottom="true"
                android:background="#111215"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_thin"
                    android:text="Please Note: "
                    android:textColor="#751123" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_thin"
                    android:text="@string/no_movie_playback"
                    android:textSize="12sp" />
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>
</ScrollView>