<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#0b0b0d"
            android:paddingLeft="16dp"
            android:paddingTop="10dp"
            android:paddingRight="16dp"
            android:paddingBottom="10dp"
            android:text="@string/now_playing"

            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <FrameLayout
            android:id="@+id/video_frame"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="180dp"
            android:background="#000">

            <VideoView
                android:id="@+id/video_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <ImageButton
                android:id="@+id/play_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:background="#00ffffff"
                android:scaleType="fitXY"
                android:src="@drawable/ic_play" />
        </FrameLayout>

        <RelativeLayout
            android:id="@+id/thumbnailView"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:visibility="visible">

            <com.halilibo.bettervideoplayer.BetterVideoPlayer
                android:id="@+id/player"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:layout_gravity="center" />

            <ImageView
                android:id="@+id/full_screen"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:clickable="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/expand" />
        </RelativeLayout>
        <!-- About the Show -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/highlight"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:fontFamily="@font/lato_thin"
                android:text="BB Handsome"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/lato_thin"
                android:text="@string/copy_copy_protected_content"
                android:textAlignment="textEnd"
                android:textSize="14sp" />
        </LinearLayout>

        <include layout="@layout/divider" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_light"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/details" />

        <include layout="@layout/divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_thin"
                    android:text="2018 | Action, Drama" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_thin"
                    android:text="Language : Hindi" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_thin"
                    android:text="Length : 180 min" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_thin"
                    android:text="Format : HD/720p" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_thin"
                    android:text="Director : " />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_thin"
                    android:text="Producer : " />
            </LinearLayout>
        </LinearLayout>

        <include layout="@layout/divider" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_thin"
            android:paddingLeft="16dp"
            android:paddingTop="8dp"
            android:paddingRight="16dp"
            android:text="@string/synopsis" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/lato_thin"
            android:maxLines="6"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/dummy_lorem_text" />

    </LinearLayout>
</ScrollView>